create about.html file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Section start -->
      <section>
-        <h2 class="title_hd">what we offer</h2>
+        <h2 class="title_hd">Home Page</h2>
         <hr>
         <div class="sec_card">
             <div class="sec_card_img">
